fix: component AttributesPillsList UI

--- a/src/app/_components/AttributesPillsList/AttributePill/index.module.scss
+++ b/src/app/_components/AttributesPillsList/AttributePill/index.module.scss
@@ -5,8 +5,14 @@
   max-width: fit-content;
   padding: 0 10px;
   border-radius: 999999px;
+  align-self: center;
+  cursor: pointer;
 }
 
 .attributeValue {
   text-wrap: nowrap;
+}
+
+.cross {
+  width: 13px;
 }
